@@ -175,6 +175,9 @@ allow_small_energy           int           1                  y
 # permits sponge to be turned on and off 
 do_sponge                    int           0                  y
 
+# if we are using the sponge, whether to use the implicit solve for it
+sponge_implicit              int           1                  y
+
 
 sum_turb_src                 Real          0.0                n        SGS
 
