@@ -38,6 +38,7 @@ static int density_reset_method;
 static int allow_negative_energy;
 static int allow_small_energy;
 static int do_sponge;
+static int sponge_implicit;
 #ifdef SGS
 static Real sum_turb_src;
 #endif
