@@ -38,6 +38,7 @@ pp.query("density_reset_method", density_reset_method);
 pp.query("allow_negative_energy", allow_negative_energy);
 pp.query("allow_small_energy", allow_small_energy);
 pp.query("do_sponge", do_sponge);
+pp.query("sponge_implicit", sponge_implicit);
 #ifdef SGS
 pp.query("sum_turb_src", sum_turb_src);
 #endif
